Ports/jdk/jdk-jdk-18-10/make/langtools/test/crules/DefinedByAnalyzer/Test.out
Test.java:19:17: compiler.err.proc.messager: compiler.misc.crules.no.defined.by
Test.java:23:17: compiler.err.proc.messager: compiler.misc.crules.defined.by.no.api
Test.java:27:17: compiler.err.proc.messager: compiler.misc.crules.wrong.defined.by
3 errors
